--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
-  "name": "animated-background",
+  "name": "particles-generator",
   "version": "1.0.0",
-  "description": "animated background in js",
-  "main": "index.js",
+  "private": true,
+  "description": "Particles Generator",
+  "keywords": [],
+  "homepage": "https://github.com/bastien-pruvost/particles-generator#readme",
+  "license": "MIT",
+  "author": {
+    "name": "Bastien Pruvost",
+    "url": "https://github.com/bastien-pruvost"
+  },
+  "main": "index.html",
+  "browserslist": "defaults",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "sass": "sass --watch ./styles/scss/:./styles/unprefixed-css/ --style expanded --no-source-map",
     "prefix": "postcss ./styles/unprefixed-css/ --use autoprefixer -d ./styles/css/ --no-map ",
     "autoprefix": "onchange \"./styles/unprefixed-css/*.css\" -- npm run prefix",
-	"webpack": "webpack",
-	"start": "webpack serve"
-  },
-  "author": "bastien_dev",
-  "license": "ISC",
-  "browserslist": "defaults"
+    "webpack": "webpack",
+    "start": "webpack serve"
+  }
 }
